[package]
name = "worduino-avr"
version = "0.1.0"
authors = ["Gergő ÉRDI <gergo@erdi.hu>"]

[dependencies]
avr-config = "2.0.1"
avr-std-stub = "1.0"
ruduino = { path = "ruduino" }
avr-progmem = { version = "0.3.2", default-features = false, features = ["unsize", "lpm-asm-loop"] }
worduino-engine = { path = "worduino-engine", default-features = false }

[profile.release]
lto = true

[features]
score = ["worduino-engine/score"]
default = []
